fixed overflow

--- a/web/css/main.scss
+++ b/web/css/main.scss
@@ -356,6 +356,7 @@ header {
         height: (76.8rem/3);
         border: 2px solid #333;
         background: #eee;
+        overflow: hidden;
 
         // &:hover {
         //     border: 2px solid #444;
